Adjusted the gap between the social links to prevent horizontal scrolling on mobile devices

--- a/themes/event/assets/styles/layouts/partials/social-links.css
+++ b/themes/event/assets/styles/layouts/partials/social-links.css
@@ -3,7 +3,7 @@
     list-style: none;
     display: flex;
     align-items: center;
-    gap: 1.375rem;
+    gap: 1rem;
 }
 
 .social-links__menu-item {
